styles/styles.css
body, .map {
	width: 100%;
	margin: 0;
	padding: 0;
}
.bar {
	z-index: 1;
	opacity: 0;
	margin: 0;
	transition: opacity 100ms ease-in;
}
.status {
	bottom: 0;
	left: 0;
	position: absolute;
	background: rgba(0,60,136,0.7);
	color: white;
	border: 0;
}
.spaced-dock {
	bottom: 3px;
	left: 3px;
	position: absolute;
}
.info {
	-webkit-filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
	filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
	background: rgba(255,255,255,0.8);
	border: 1px solid #cccccc;
	border-radius: 10px;

	white-space: pre-wrap;       /* Since CSS 2.1 */
	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
	white-space: -pre-wrap;      /* Opera 4-6 */
	white-space: -o-pre-wrap;    /* Opera 7 */
	word-wrap: break-word;       /* Internet Explorer 5.5+ */
}
.center {
	position: absolute;
	left: 50%;
	top: 50%;
	width: 50%;
	height: 10%;
	margin-left: -25%;
	margin-top: -5%;
	text-align: center;
}

